--- a/index.html
+++ b/index.html
@@ -131,6 +131,57 @@
         </div>
     </section>
 
+    <!-- Monkeys Gang Section -->
+    <section class="py-5" style="background: linear-gradient(135deg, #2c1810 0%, #1a0f09 100%); position: relative; overflow: hidden;">
+        <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-size: 400px; opacity: 0.03;">🐵</div>
+        <div class="container py-4" style="position: relative; z-index: 1;">
+            <div class="row align-items-center">
+                <div class="col-lg-6 mb-4 mb-lg-0">
+                    <span style="display: inline-block; background: rgba(255, 140, 0, 0.2); border: 2px solid #FF8C00; color: #FF8C00; padding: 8px 20px; border-radius: 30px; font-size: 0.9rem; font-weight: 700; margin-bottom: 20px;">
+                        🔥 GANGUE OFICIAL
+                    </span>
+                    <h2 class="display-4 fw-bold mb-4" style="color: #FF8C00; font-family: 'Playfair Display', serif; text-shadow: 3px 3px 6px rgba(0,0,0,0.5);">
+                        🐵 Monkeys Gang
+                    </h2>
+                    <p class="lead text-white-50 mb-4" style="font-size: 1.2rem; line-height: 1.8;">
+                        Os macacos mais insanos do servidor. Unidos pela zoeira, lendários pela história. Conheça a gangue que transformou o caos em arte.
+                    </p>
+                    <div class="d-flex gap-3 flex-wrap mb-4">
+                        <div style="background: rgba(255, 140, 0, 0.1); border: 1px solid #FF8C00; padding: 15px 25px; border-radius: 15px;">
+                            <div style="font-size: 1.5rem; font-weight: 700; color: #FF8C00;">6+</div>
+                            <div style="font-size: 0.85rem; color: #ccc;">Membros Ativos</div>
+                        </div>
+                        <div style="background: rgba(255, 140, 0, 0.1); border: 1px solid #FF8C00; padding: 15px 25px; border-radius: 15px;">
+                            <div style="font-size: 1.5rem; font-weight: 700; color: #FF8C00;">∞</div>
+                            <div style="font-size: 0.85rem; color: #ccc;">Lendas Criadas</div>
+                        </div>
+                        <div style="background: rgba(255, 140, 0, 0.1); border: 1px solid #FF8C00; padding: 15px 25px; border-radius: 15px;">
+                            <div style="font-size: 1.5rem; font-weight: 700; color: #FF8C00;">100%</div>
+                            <div style="font-size: 0.85rem; color: #ccc;">Zoeira</div>
+                        </div>
+                    </div>
+                    <a href="monkeys.html" class="btn btn-lg" style="background: linear-gradient(135deg, #FF8C00 0%, #FF6347 100%); border: none; color: white; font-weight: 700; padding: 15px 40px; border-radius: 50px; box-shadow: 0 8px 20px rgba(255, 140, 0, 0.4); transition: all 0.3s ease;">
+                        <i class="bi bi-emoji-smile me-2"></i>
+                        Conhecer os Monkeys
+                        <i class="bi bi-arrow-right ms-2"></i>
+                    </a>
+                </div>
+                <div class="col-lg-6 text-center">
+                    <div style="font-size: 15rem; line-height: 1; text-shadow: 0 0 60px rgba(255, 140, 0, 0.5);">
+                        🐵
+                    </div>
+                    <div class="d-flex justify-content-center gap-2 mt-3 flex-wrap">
+                        <span style="font-size: 3rem;">🙈</span>
+                        <span style="font-size: 3rem;">🙉</span>
+                        <span style="font-size: 3rem;">🙊</span>
+                        <span style="font-size: 3rem;">🦍</span>
+                        <span style="font-size: 3rem;">🐒</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Footer -->
     <footer>
         <div class="container">
